[package]
name = "Rusthia"
version = "0.1.0"
edition = "2024"

[dependencies]
# Bevy engine (ECS, rendu, input, UI)
bevy = { version = "0.15", features = ["dynamic_linking"] }

# Audio haute précision — alternative idiomatique à Godot AudioStreamPlayer
kira = { version = "0.12", features = ["mp3", "ogg", "wav"] }

# Parsing des maps
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"
byteorder = "1"

# Logging
log = "0.4"

# File picker natif (xdg-portal sur Linux)
rfd = "0.14"

# ==============================================================================
# PROFILS DE COMPILATION — Évite les lenteurs de debug avec Bevy
# ==============================================================================
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
